--- a/BT-Doitien.html
+++ b/BT-Doitien.html
@@ -33,14 +33,14 @@
             </td>
             <td></td>
             <td>
-                <button onclick="gettext()" type="button" ;>Convert</button>
+                <button onclick="Doitien()" type="button" ;>Convert</button>
             </td>
         </tr>
     </table>
     <script>
-        function gettext() {
+        function Doitien() {
             var nhaptien = document.getElementById('nhaptien').value;
-            alert(nhaptien / 23000 + "USD")
+            alert(nhaptien/23000 + "USD")
         }
     </script>
 </body>
